--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,23 @@ body {background-color: #CCC;}
     text-align: left;
 }
 
+
 html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+#searchbx {
+    border : 10px solid black;
+}
+
 #map {
-        height: 100%;
+  padding: 0px 0px 0px 0px;
+  text-overflow: ellipsis;
+  width : 60%;
+  height: 60%;
+  border: 10px solid black;
+  float : right;
       }
 .controls {
   margin-top: 10px;
@@ -42,7 +52,7 @@ html, body {
   border-radius: 2px 0 0 2px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  height: 32px;
+  height: 5%;
   outline: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
@@ -78,13 +88,6 @@ html, body {
   font-weight: 300;
 }
 
-    </style>
-    <title>Places Searchbox</title>
-    <style>
-      #target {
-        width: 345px;
-      }
-    </style>
 /*
 .wikipedia-container {
     float:right;
